[Thivya] Fix test failures

--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -9,3 +9,13 @@ screenshot_on_failure = true
 
 # The path to the gauge logs directory. Should be either relative to the project directory or an absolute path
 logs_directory = build/logs
+
+APP_BASE_URL=http://gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/map
+INPUT_FORM_URL=http://gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
+
+#APP_BASE_URL=http://localhost:8080/map
+#INPUT_FORM_URL=http://localhost:8080/health_indicator_questionnaire
+
+# For webdriver
+BROWSER=chrome
+CHROME_DRIVER_PATH=/usr/local/bin/chromedriver
