--- a/env/qa/qa.properties
+++ b/env/qa/qa.properties
@@ -1,6 +1,7 @@
 # Application properties
 APP_BASE_URL=http://35.170.87.166:8080/map
 INPUT_FORM_URL=http://35.170.87.166:8080/health_indicator_questionnaire
+ADMIN_URL = http://35.170.87.166:8080/admin
 
 # For webdriver
 BROWSER=chrome
