--- a/env/qa/qa.properties
+++ b/env/qa/qa.properties
@@ -1,7 +1,7 @@
 # Application properties
 APP_BASE_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/map
 INPUT_FORM_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
-ADMIN_URL = http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/admin
+ADMIN_URL = http://admin:admin@35.170.87.166:8080/admin/
 
 # For webdriver
 BROWSER=chrome
