[Thivya] Change the radio button element css as its failing in CI

--- a/env/ci/default.properties
+++ b/env/ci/default.properties
@@ -11,9 +11,11 @@ screenshot_on_failure = true
 logs_directory = build/logs
 
 # Application properties
-APP_BASE_URL=http://gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/map
-INPUT_FORM_URL=http://gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
+APP_BASE_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/map
+INPUT_FORM_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
+ADMIN_URL = http://admin:admin@35.170.87.166:8080/admin/
+
 
 # For webdriver
 BROWSER=chrome
-CHROME_DRIVER_PATH=/usr/bin/chromedriver
+CHROME_DRIVER_PATH=/usr/local/bin/chromedriver
