[Thivya] Verify published data tests

--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -10,11 +10,10 @@ screenshot_on_failure = true
 # The path to the gauge logs directory. Should be either relative to the project directory or an absolute path
 logs_directory = build/logs
 
-APP_BASE_URL=http://gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/map
-INPUT_FORM_URL=http://gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
-
-#APP_BASE_URL=http://localhost:8080/map
-#INPUT_FORM_URL=http://localhost:8080/health_indicator_questionnaire
+# Application properties
+APP_BASE_URL=http://localhost:8080/map
+INPUT_FORM_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
+ADMIN_URL = http://admin:admin@localhost:8080/admin/
 
 # For webdriver
 BROWSER=chrome
